--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
-carpentry: "FIXME"    # what kind of Carpentry (must be either "dc" or "swc")
-venue: "FIXME"        # brief name of host site without address (e.g., "Euphoric State University")
-address: "FIXME"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
-country: "FIXME"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
-language: "FIXME"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
-latlng: "FIXME"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
-humandate: "FIXME"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
-humantime: "FIXME"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
-startdate: FIXME      # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
-enddate: FIXME        # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["FIXME"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+carpentry: "swc"    # what kind of Carpentry (must be either "dc" or "swc")
+venue: "The Jackson Laboratory"        # brief name of host site without address (e.g., "Euphoric State University")
+address: "Holt Conference Room, 10 Discovery Drive, Farmington, CT 06032"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
+country: "US"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
+language: "en"     # lowercase two-letter ISO language code such as "fr" (see https://en.wikipedia.org/wiki/ISO_639-1)
+latlng: "41.732135,-72.793329"       # decimal latitude and longitude of workshop venue (e.g., "41.7901128,-87.6007318" - use http://www.latlong.net/)
+humandate: "Dec 16, 2016"    # human-readable dates for the workshop (e.g., "Feb 17-18, 2020")
+humantime: "9:00am - 4:30pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
+startdate: 2016-12-16 # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
+enddate: 2016-12-16 # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
+instructor: ["Saira Kazmi, Sandeep Namburi, Saira Kazmi"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["FIXME"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["fixme@example.org"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad:             # optional: URL for the workshop Etherpad if there is one
@@ -194,23 +194,24 @@ and the administrator will contact you if we need any extra information.</h4>
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td>09:00</td> <td>Introduction to shell</td> </tr>
+      <tr> <td>9:30</td> <td>Working with files and directories</td> </tr>
+      <tr> <td>10:00</td> <td>Pipes, filters, sorting, saving to files</td> </tr>
       <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-    </table>
-  </div>
-  <div class="col-md-6">
-    <h3>Day 2</h3>
-    <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>10:45</td> <td>Using loops for repetitive tasks</td> </tr>
+      <tr> <td>11:15</td> <td>Writing Shell Scripts</td> </tr>
+      <tr> <td>12:00</td> <td>Lunch break</td> </tr>
+      <tr> <td>1:00-1:30</td> <td>Finding things</td> </tr>
+      <tr> <td>1:30-2:30</td> <td>Writing script to do tasks on single machine (FastQC, Trimmomatic, Alignment)</td> </tr>
+      <tr> <td>2:30</td> <td>Coffee</td> </tr>
+      <tr> <td>2:45</td> <td>Introduction to HPC clusters</td> </tr>
+      <tr> <td> </td> <td>Connecting to clusters (ssh, scp)</td> </tr>
+       <tr> <td> </td> <td>Using installed software</td> </tr>
+       <tr> <td> </td> <td>Queue in HPC</td> </tr>
+       <tr> <td> </td> <td>Running Jobs</td> </tr>
+       <tr> <td> </td> <td>Job Arrays</td> </tr>
+       <tr> <td> </td> <td>Write jobs for scaling up computation (FastQC, Trimmomatic, Alignment)</td> </tr>
+       <tr>4:00 <td> </td> <td>Wrap up</td> </tr>
     </table>
   </div>
 </div>
