--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: workshop      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS EITHER.  (THANK YOU.)
-carpentry: "swc"    # what kind of Carpentry (must be either "dc" or "swc")
+carpentry: ""    # what kind of Carpentry (must be either "dc" or "swc")
 venue: "The Jackson Laboratory"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "Holt Conference Room, 10 Discovery Drive, Farmington, CT 06032"      # full street address of workshop (e.g., "Room A, 123 Forth Street, Blimingen, Euphoria")
 country: "US"      # lowercase two-letter ISO country code such as "fr" (see https://en.wikipedia.org/wiki/ISO_3166-1)
@@ -47,10 +47,7 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
 </iframe>
 {% endif %}
 
-<h4>This is the workshop template.  Use it to create your own website.
-Delete these lines and please fill in 
-<a href="{{site.amy_site}}/submit">this self-organized workshop form</a>
-and the administrator will contact you if we need any extra information.</h4>
+<h4>This HPC workshop is for internal JAX users.</h4>
 
 <h2 id="general">General Information</h2>
 
@@ -192,7 +189,7 @@ and the administrator will contact you if we need any extra information.</h4>
 
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>December 16, 2016</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td> <td>Introduction to shell</td> </tr>
       <tr> <td>9:30</td> <td>Working with files and directories</td> </tr>
@@ -211,7 +208,7 @@ and the administrator will contact you if we need any extra information.</h4>
        <tr> <td> </td> <td>Running Jobs</td> </tr>
        <tr> <td> </td> <td>Job Arrays</td> </tr>
        <tr> <td> </td> <td>Write jobs for scaling up computation (FastQC, Trimmomatic, Alignment)</td> </tr>
-       <tr>4:00 <td> </td> <td>Wrap up</td> </tr>
+       <tr><td>4:00</td> <td>Wrap up</td> </tr>
     </table>
   </div>
 </div>
