--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ eventbrite:  ""       # optional: alphanumeric key for Eventbrite registration, 
 
 <h3>This full day "Introduction to High Performance Computing" workshop is for internal JAX users.</h3>
 
+<p>Some materials used in these lessons were derived from work that is Copyright © Data Carpentry (http://datacarpentry.org/). 
+All Data Carpentry instructional material is made available under the [Creative Commons Attribution license](https://creativecommons.org/licenses/by/4.0/) (CC BY 4.0). </p>
 <h2 id="general">General Information</h2>
 
 <!--
