--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ humandate: "Dec 16, 2016"    # human-readable dates for the workshop (e.g., "Feb
 humantime: "9:00am - 4:30pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-12-16 # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2016-12-16 # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Saira Kazmi", "Sandeep Namburi", "Shane Sanders"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
-helper: []     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
+instructor: ["Saira Kazmi", "Sandeep Namburi", "Sue McClatchy", "Shane Sanders"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+helper: ["TBD"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["saira.kazmi@jax.org","sandeep.namburi@jax.org", "shane.sanders@jax.org"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad:             # optional: URL for the workshop Etherpad if there is one
 eventbrite:  ""       # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
@@ -39,7 +39,7 @@ eventbrite:  ""       # optional: alphanumeric key for Eventbrite registration, 
 -->
 {% if page.eventbrite %}
 <iframe
-  src="https://www.eventbrite.com/e/introduction-to-high-performance-computing-tickets-29375251167"
+  src="https://www.eventbrite.com/e/linux-bootcamp-tickets-28917911251"
   frameborder="0"
   width="100%"
   height="248px"
@@ -47,10 +47,10 @@ eventbrite:  ""       # optional: alphanumeric key for Eventbrite registration, 
 </iframe>
 {% endif %}
 
-<h3>This full day "Introduction to High Performance Computing" workshop is for internal JAX users.</h3>
+<h3>This full day "Introduction to High Performance Computing" workshop is for internal JAX users. Please register with your institutional e-mail.</h3>
 
-<p>Some materials used in these lessons were derived from work that is Copyright © Data Carpentry (http://datacarpentry.org/). 
-All Data Carpentry instructional material is made available under the [Creative Commons Attribution license](https://creativecommons.org/licenses/by/4.0/) (CC BY 4.0). </p>
+<h4>Some materials used in these lessons were derived from work that is Copyright © Software Carpentry (http://software-carpentry.org/). 
+All Software Carpentry instructional material is made available under the [Creative Commons Attribution license](https://creativecommons.org/licenses/by/4.0/) (CC BY 4.0). <h4>
 <h2 id="general">General Information</h2>
 
 <!--
