--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humandate: "Dec 16, 2016"    # human-readable dates for the workshop (e.g., "Feb
 humantime: "9:00am - 4:30pm"    # human-readable times for the workshop (e.g., "9:00 am - 4:30 pm")
 startdate: 2016-12-16 # machine-readable start date for the workshop in YYYY-MM-DD format like 2015-01-01
 enddate: 2016-12-16 # machine-readable end date for the workshop in YYYY-MM-DD format like 2015-01-02
-instructor: ["Saira Kazmi", "Sandeep Namburi", "Sue McClatchy", "Shane Sanders"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Saira Kazmi", "Sandeep Namburi", "Shane Sanders"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["TBD"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["saira.kazmi@jax.org","sandeep.namburi@jax.org", "shane.sanders@jax.org"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
 etherpad:             # optional: URL for the workshop Etherpad if there is one
@@ -206,8 +206,8 @@ All Software Carpentry instructional material is made available under the [Creat
       <tr> <td>2:45</td> <td>Introduction to HPC clusters</td> </tr>
       <tr> <td> </td> <td>Connecting to clusters (ssh, scp)</td> </tr>
        <tr> <td> </td> <td>Using installed software</td> </tr>
-       <tr> <td> </td> <td>Queue in HPC</td> </tr>
-       <tr> <td> </td> <td>Running Jobs</td> </tr>
+       <tr> <td> </td> <td>Queues on HPC</td> </tr>
+       <tr> <td> </td> <td>Running Jobs on HPC</td> </tr>
        <tr> <td> </td> <td>Job Arrays</td> </tr>
        <tr> <td> </td> <td>Write jobs for scaling up computation (FastQC, Trimmomatic, Alignment)</td> </tr>
        <tr><td>4:00</td> <td>Wrap up</td> </tr>
@@ -529,7 +529,7 @@ All Software Carpentry instructional material is made available under the [Creat
 
 <div id="vm">
   <h3>Virtual Machine</h3>
-
+<!--
   <p>
     Some instructors prefer to have learners use a virtual machine (VM)
     rather than install software on their own computers.  If your
@@ -550,3 +550,4 @@ All Software Carpentry instructional material is made available under the [Creat
     </li>
   </ol>
 </div>
+-->
