fix eventbrite size

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ All Software Carpentry instructional material is made available under the [Creat
 <iframe
   src="https://www.eventbrite.com/e/linux-bootcamp-tickets-28917911251"
   frameborder="0"
-  width="60%"
-  height="500px"
+  width="100%"
+  height="1500px"
   scrolling="auto">
 </iframe>
 {% endif %}
@@ -200,8 +200,8 @@ All Software Carpentry instructional material is made available under the [Creat
       <tr> <td>10:45</td> <td>Using loops for repetitive tasks</td> </tr>
       <tr> <td>11:15</td> <td>Writing Shell Scripts</td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>1:00-1:30</td> <td>Finding things</td> </tr>
-      <tr> <td>1:30-2:30</td> <td>Writing script to do tasks on single machine (FastQC, Trimmomatic, Alignment)</td> </tr>
+      <tr> <td>1:00</td> <td>Finding things</td> </tr>
+      <tr> <td>1:30</td> <td>Writing script to do tasks on single machine (FastQC, Trimmomatic, Alignment)</td> </tr>
       <tr> <td>2:30</td> <td>Coffee</td> </tr>
       <tr> <td></td> <td>Introduction to HPC clusters</td> </tr>
       <tr> <td>2:45 </td> <td>Connecting to clusters (ssh, scp)</td> </tr>
