--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ All Software Carpentry instructional material is made available under the [Creat
   <div class="col-md-6">
     <h3>December 16, 2016</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td>Introduction to shell</td> </tr>
+      <tr> <td>09:00</td> <td><a href="./_episodes/01-intro.md"> Introduction to shell </a> </td> </tr>
       <tr> <td>9:30</td> <td>Working with files and directories</td> </tr>
       <tr> <td>10:00</td> <td>Pipes, filters, sorting, saving to files</td> </tr>
       <tr> <td>10:30</td> <td>Coffee</td> </tr>
