--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@ All Software Carpentry instructional material is made available under the [Creat
   <div class="col-md-6">
     <h3>December 16, 2016</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td> <td><a href="./_episodes/01-intro.md"> Introduction to shell </a> </td> </tr>
-      <tr> <td>9:30</td> <td>Working with files and directories</td> </tr>
-      <tr> <td>10:00</td> <td>Pipes, filters, sorting, saving to files</td> </tr>
+      <tr> <td>09:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/01-intro/"> Introduction to shell </a> </td> </tr>
+      <tr> <td>9:30</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/02-filedir/"> Working with files and directories</a></td> </tr>
+      <tr> <td>10:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/04-pipefilter/">Pipes, filters, sorting, saving to files</a></td> </tr>
       <tr> <td>10:30</td> <td>Coffee</td> </tr>
-      <tr> <td>10:45</td> <td>Using loops for repetitive tasks</td> </tr>
-      <tr> <td>11:15</td> <td>Writing Shell Scripts</td> </tr>
+      <tr> <td>10:45</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/05-loop/">Using loops for repetitive tasks </a></td> </tr>
+      <tr> <td>11:15</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/05-loop/"> Writing Shell Scripts</a></td> </tr>
       <tr> <td>12:00</td> <td>Lunch break</td> </tr>
-      <tr> <td>1:00</td> <td>Finding things</td> </tr>
+      <tr> <td>1:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/07-find/"> Finding things </a></td> </tr>
       <tr> <td>1:30</td> <td>Writing script to do tasks on single machine (FastQC, Trimmomatic, Alignment)</td> </tr>
       <tr> <td>2:30</td> <td>Coffee</td> </tr>
       <tr> <td></td> <td>Introduction to HPC clusters</td> </tr>
