--- a/index.html
+++ b/index.html
@@ -196,13 +196,13 @@ All Software Carpentry instructional material is made available under the [Creat
       <tr> <td>09:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/01-intro/"> Introduction to shell </a> </td> </tr>
       <tr> <td>9:30</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/02-filedir/"> Working with files and directories</a></td> </tr>
       <tr> <td>10:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/04-pipefilter/">Pipes, filters, sorting, saving to files</a></td> </tr>
-      <tr> <td>10:30</td> <td>Coffee</td> </tr>
+      <tr> <td>10:30</td> <td>15 minute break</td> </tr>
       <tr> <td>10:45</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/05-loop/">Using loops for repetitive tasks </a></td> </tr>
       <tr> <td>11:15</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/05-loop/"> Writing Shell Scripts</a></td> </tr>
-      <tr> <td>12:00</td> <td>Lunch break</td> </tr>
+      <tr> <td>12:00</td> <td>1 hour break</td> </tr>
       <tr> <td>1:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/07-find/"> Finding things </a></td> </tr>
       <tr> <td>1:30</td> <td>Writing script to do tasks on single machine (FastQC, Trimmomatic, Alignment)</td> </tr>
-      <tr> <td>2:30</td> <td>Coffee</td> </tr>
+      <tr> <td>2:30</td> <td>15 minute break</td> </tr>
       <tr> <td></td> <td>Introduction to HPC clusters</td> </tr>
       <tr> <td>2:45 </td> <td>Connecting to clusters (ssh, scp)</td> </tr>
        <tr> <td>3:00 </td> <td>Using installed software</td> </tr>
