--- a/index.html
+++ b/index.html
@@ -525,6 +525,21 @@ All Software Carpentry instructional material is made available under the [Creat
   </div>
 </div> <!-- End of 'editor' section. -->
   <p>
+    
+<div id="vm">
+  <h3>SSH and SCP (Putty and WinScp) - Call helpdesk for help with this software.</h3>
+  <p>
+    For windows machines, you will need Putty to be able to connect to the hpc nodes.  
+  </p>
+  <ol>
+    <li>
+      For secure shell (ssh), download and install <a href="http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html">Putty</a>.
+    </li>
+    <li>
+       For secure file copy (scp), download and install <a href="http://winscp.net/eng/download.php">WinSCP</a>.
+    </li>
+  </ol>
+</div>
 <!--
 
 <div id="vm">
