--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ All Software Carpentry instructional material is made available under the [Creat
 <div class="row">
   <div class="col-md-6">
     <h3>December 16, 2016</h3>
-    <h2> Data Download <h2>
+    <h2> Data Download </h2>
       <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/data/shell-novice-data.zip">shell-novice-data.zip</a>
     <table class="table table-striped">
       <tr> <td>09:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/01-intro/"> Introduction to shell </a> </td> </tr>
