--- a/index.html
+++ b/index.html
@@ -181,8 +181,12 @@ All Software Carpentry instructional material is made available under the [Creat
   to match your plans.  You may also want to change 'Day 1' and 'Day
   2' to be actual dates or days of the week.
 -->
+  
+<h2> Data Download </h2>
+  <p> Download data from : 
+      <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/data/shell-novice-data.zip">shell-novice-data.zip</a>
+  </p>
 <h2 id="schedule">Schedule</h2>
-
 <!-- DO NOT EDIT SURVEY LINKS
 <p><em>Surveys</em></p>
 <p>Please be sure to complete these surveys before and after the workshop.</p>
@@ -192,8 +196,6 @@ All Software Carpentry instructional material is made available under the [Creat
 <div class="row">
   <div class="col-md-6">
     <h3>December 16, 2016</h3>
-    <h2> Data Download </h2>
-      <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/data/shell-novice-data.zip">shell-novice-data.zip</a>
     <table class="table table-striped">
       <tr> <td>09:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/01-intro/"> Introduction to shell </a> </td> </tr>
       <tr> <td>9:30</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/02-filedir/"> Working with files and directories</a></td> </tr>
