added links to lessons

--- a/index.html
+++ b/index.html
@@ -272,7 +272,8 @@ All Software Carpentry instructional material is made available under the [Creat
       <li>Looping over files</li>
       <li>Creating and running shell scripts</li>
       <li>Finding things</li>
-      <li><a href="{{site.swc_pages}}/shell-novice/reference/">Reference...</a></li>
+      <li><a href="https://gist.github.com/rizkaz/f87e88d7bf73a2a7fdcd58e0a7d4aafa#file-shell-novice-cheatsheet-md">Cheatsheet...</a></li>
+      <li><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/reference/">Reference...</a></li>
     </ul>
   </div>
   <!--
