--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ All Software Carpentry instructional material is made available under the [Creat
       <tr> <td>11:15</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/06-script/"> Writing Shell Scripts</a></td> </tr>
       <tr> <td>12:00</td> <td>1 hour break</td> </tr>
       <tr> <td>1:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/07-find/"> Finding things </a></td> </tr>
-      <tr> <td>1:30</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/08-workflow/"> Writing script to do tasks on single machine (FastQC, Trimmomatic, Alignment)</a></td> </tr>
+      <tr> <td>1:30</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/08-workflow/"> Automating a Workflow </a></td> </tr>
       <tr> <td>2:30</td> <td>15 minute break</td> </tr>
       <tr> <td></td> <td>Introduction to HPC clusters</td> </tr>
       <tr> <td>2:45 </td> <td>Connecting to clusters (ssh, scp)</td> </tr>
