--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@ All Software Carpentry instructional material is made available under the [Creat
       <tr> <td>1:00</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/07-find/"> Finding things </a></td> </tr>
       <tr> <td>1:30</td> <td><a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/08-workflow/"> Automating a Workflow </a></td> </tr>
       <tr> <td>2:30</td> <td>15 minute break</td> </tr>
-      <tr> <td></td> <td>Introduction to HPC clusters</td> </tr>
-      <tr> <td>2:45 </td> <td>Connecting to clusters (ssh, scp)</td> </tr>
-       <tr> <td>3:00 </td> <td>Using installed software</td> </tr>
-       <tr> <td>3:10 </td> <td>Queues on HPC</td> </tr>
-       <tr> <td>3:15 </td> <td>Running Jobs on HPC</td> </tr>
-       <tr> <td>3:30 </td> <td>Job Arrays</td> </tr>
-       <tr> <td>3:45 </td> <td>Write jobs for scaling up computation (FastQC, Trimmomatic, Alignment)</td> </tr>
-       <tr><td>4:00 </td> <td>Wrap up</td> </tr>
+      <tr> <td></td> <td> Introduction to HPC clusters </td> </tr>
+      <tr> <td>2:45 </td> <td> <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/09-hpc_episode_01/"> Connecting to clusters (ssh, scp) </a></td> </tr>
+       <tr> <td>3:00 </td> <td> <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/10-hpc_episode_02/"> Queues on HPC </a></td> </tr>
+      <tr> <td>3:05 </td> <td> <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/11-hpc_episode_03/"> Using installed software</a></td> </tr>
+       <tr> <td>3:15 </td> <td> <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/12-hpc_episode_04/"> Running Jobs on HPC</a></td> </tr>
+       <tr> <td>3:30 </td> <td> <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/13-hpc_episode_05/"> Job Arrays</a></td> </tr>
+       <tr> <td>3:45 </td> <td> <a href="https://thejacksonlaboratory.github.io/introduction-to-hpc/14-hpc_episode_06/"> Write jobs for scaling up computation (FastQC, Trimmomatic, Alignment)</a></td> </tr>
+       <tr><td>4:00 </td> <td>Wrap up</a></td> </tr>
     </table>
   </div>
 </div>
